# GPTPoP

./: README.md  pyproject.toml
prince_gpt/: __init__.py
prince_gpt/core/: actions.py  enums.py  schemas.py  state.py
prince_gpt/data/: transition_log.py
prince_gpt/env/: base_env.py  mock_env.py  sdlpop_adapter.py
prince_gpt/execution/: macro_executor.py  verifier.py
prince_gpt/llm/: prompts.py  schemas.py
prince_gpt/planner/: astar.py  heuristics.py
prince_gpt/training/: dataset.py
tests/: test_astar_planner.py  test_mock_env.py  test_transition_log.py
