[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prince-gpt"
version = "0.1.0"
description = "Mock-first software harness for Prince of Persia AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
